--- a/calc.html
+++ b/calc.html
@@ -15,6 +15,7 @@
   ga('send', 'pageview');
 
 </script>
+    <script src="i18n.js"></script>
     <script src="third_party/d3.min.js"></script>
     <script src="third_party/dagre.min.js"></script>
     <script type="module">
@@ -55,6 +56,7 @@
     <script src="icon.js"></script>
     <script src="debug.js"></script>
     <script src="settings.js"></script>
+
     <script src="init.js"></script>
 </head>
 
@@ -76,26 +78,26 @@ limitations under the License.-->
     <table>
     <tr>
     <td id="targetparent">
-    <ul id="targets" class="targets"><li><button class="targetButton ui" title="Add new item." onclick="plusHandler()">+</a></li></ul>
+    <ul id="targets" class="targets"><li><button class="targetButton ui" title="Add new item." onclick="plusHandler()" data-i18n="add-new-item">+</a></li></ul>
     </td>
 
     <td class="changecell">
     <div class="changebox">
-    Recent changes:<br>
-    2021-01-29 - Updated to 1.1.19
+    <span data-i18n="changes">Recent changes:</span><br>
+    <span data-i18n="update-version">2021-01-29 - Updated to 1.1.19</span>
     </div>
     </td>
     </tr>
     </table>
 
     <div class="tabs">
-        <button class="tab_button" id="totals_button" onclick="clickTab('totals_tab')">Factory</button>
-        <!--<button class="tab_button" id="steps_button" onclick="clickTab('steps_tab')">Items</button>-->
-        <button class="tab_button" id="graph_button" onclick="clickVisualize('graph_tab')">Visualize</button>
-        <button class="tab_button" id="settings_button" onclick="clickTab('settings_tab')">Settings</button>
-        <button class="tab_button" id="faq_button" onclick="clickTab('faq_tab')">FAQ</button>
-        <button class="tab_button" id="about_button" onclick="clickTab('about_tab')">About</button>
-        <button class="tab_button" id="debug_button" onclick="clickTab('debug_tab')">Debug</button>
+        <button class="tab_button" id="totals_button" onclick="clickTab('totals_tab')" data-i18n="Factory">Factory</button>
+        <!-- <button class="tab_button" id="steps_button" onclick="clickTab('steps_tab')">Items</button> -->
+        <button class="tab_button" id="graph_button" onclick="clickVisualize('graph_tab')" data-i18n="Visualize">Visualize</button>
+        <button class="tab_button" id="settings_button" onclick="clickTab('settings_tab')" data-i18n="Settings">Settings</button>
+        <button class="tab_button" id="faq_button" onclick="clickTab('faq_tab')" data-i18n="FAQ">FAQ</button>
+        <button class="tab_button" id="about_button" onclick="clickTab('about_tab')" data-i18n="About">About</button>
+        <button class="tab_button" id="debug_button" onclick="clickTab('debug_tab')" data-i18n="Debug">Debug</button>
     </div>
 
     <div id="steps_tab" class="tab">
@@ -192,97 +194,102 @@ limitations under the License.-->
     <div id="settings_tab" class="tab">
         <table>
         <tr>
-        <td class="setting-label">Use recipe set:</td>
+        <td class="setting-label" data-i18n="lang">Language:</td>
+        <td><select id="lang_set" onchange="changeLang()"></select></td>
+        </tr>
+
+        <tr>
+        <td class="setting-label" data-i18n="version">Use recipe set:</td>
         <td><select id="data_set" onchange="changeMod()"></select></td>
         </tr>
 
         <tr>
-        <td class="setting-label">Color scheme:</td>
+        <td class="setting-label" data-i18n="theme">Color scheme:</td>
         <td><select id="color_scheme" onchange="changeColor(event)"></select></td>
         </tr>
 
         <tr>
-        <td class="setting-label top">Display rates as:</td>
+        <td class="setting-label top" data-i18n="rate">Display rates as:</td>
         <td><form id="display_rate"></form></td>
         </tr>
 
         <tr>
-        <td class="setting-label">Rate precision:</td>
+        <td class="setting-label" data-i18n="rate-p">Rate precision:</td>
         <td><input id="rprec" class="prec" type="number" value="3" min="0" onchange="changeRPrec(event)"></td>
         </tr>
         <tr>
-        <td class="setting-label">Factory precision:</td>
+        <td class="setting-label" data-i18n="fact-p">Factory precision:</td>
         <td><input id="fprec" class="prec" type="number" value="1" min="0" onchange="changeFPrec(event)"></td>
         </tr>
 
         <tr>
-        <td class="setting-label">Minimum assembling machine level:</td>
+        <td class="setting-label" data-i18n="machine-level">Minimum assembling machine level:</td>
         <td><span id="minimum_assembler"></span></td>
         </tr>
 
         <tr>
-        <td class="setting-label">Preferred furnace:</td>
+        <td class="setting-label" data-i18n="furnace-prefer">Preferred furnace:</td>
         <td><span id="furnace"></span></td>
         </tr>
 
         <tr>
-        <td class="setting-label">Preferred fuel:</td>
+        <td class="setting-label" data-i18n="fuel-prefer">Preferred fuel:</td>
         <td><span id="fuel"></span></td>
         </tr>
 
         <tr>
-        <td class="setting-label">Primary oil processing recipe:</td>
+        <td class="setting-label" data-i18n="oil-p">Primary oil processing recipe:</td>
         <td><span id="oil"></span></td>
         </tr>
 
         <tr>
-        <td class="setting-label"><label for="kovarex">Enable Kovarex processing:</label></td>
+        <td class="setting-label"><label for="kovarex" data-i18n="Kovarex-e">Enable Kovarex processing:</label></td>
         <td><input type="checkbox" id="kovarex" onchange="changeKovarex(event)" checked></td>
         </tr>
 
         <tr>
-        <td class="setting-label">Preferred belt:</td>
+        <td class="setting-label" data-i18n="belt-p">Preferred belt:</td>
         <td><span id="belt"></span></td>
         </tr>
 
         <tr>
-        <td class="setting-label">Minimum pipe length:</td>
+        <td class="setting-label" data-i18n="min-pipe-l">Minimum pipe length:</td>
         <td><input id="pipe_length" class="length" type="number" value="17" min="0" onchange="changePipeLength(event)"></td>
         </tr>
 
         <tr>
-        <td class="setting-label">Mining productivity bonus:</td>
+        <td class="setting-label" data-i18n="mine-p">Mining productivity bonus:</td>
         <td>+<input id="mprod" class="mprod" type="number" step="2" value="0" min="0" onchange="changeMprod()">%</td>
         </tr>
 
         <tr>
-        <td class="setting-label">Default module:</td>
+        <td class="setting-label" data-i18n="module-d">Default module:</td>
         <td><span id="default_module"></span></td>
         </tr>
 
         <tr>
-        <td class="setting-label">Default beacon:</td>
+        <td class="setting-label" data-i18n="beacon-d">Default beacon:</td>
         <td><span id="default_beacon"></span> &times; <input id="default_beacon_count" class="beacon" type="number" value="0" onchange="changeDefaultBeaconCount(event)"></td>
         </tr>
 
         <tr>
-        <td class="setting-label top">Recipe sort order:</td>
+        <td class="setting-label top" data-i18n="sort-order">Recipe sort order:</td>
         <td><input type="radio" name="sort_order" id="topo_order" value="topo" checked onchange="changeSortOrder(event)">
-        <label for="topo_order">Topological order</label><br />
+        <label for="topo_order" data-i18n="t-order">Topological order</label><br />
         <input type="radio" name="sort_order" id="alpha_order" value="alpha" onchange="changeSortOrder(event)">
-        <label for="alpha_order">Alphabetical order</label></td>
+        <label for="alpha_order" data-i18n="a-order">Alphabetical order</label></td>
         </tr>
 
         <tr>
-        <td class="setting-label top">Format values as:</td>
+        <td class="setting-label top" data-i18n="format-value">Format values as:</td>
         <td><input type="radio" name="format" id="decimal_format" value="decimal" checked onchange="changeFormat(event)">
-        <label for="decimal_format">Decimals</label><br />
+        <label for="decimal_format" data-i18n="format-d">Decimals</label><br />
         <input type="radio" name="format" id="rational_format" value="rational" onchange="changeFormat(event)">
-        <label for="rational_format">Rationals</label></td>
+        <label for="rational_format" data-i18n="format-r">Rationals</label></td>
         </tr>
 
         <tr>
-        <td class="setting-label"><label for="tooltip">Fancy tooltips (requires refresh):</label></td>
+        <td class="setting-label"><label for="tooltip" data-i18n="tooltip-e">Fancy tooltips (requires refresh):</label></td>
         <td><input type="checkbox" id="tooltip" onchange="changeTooltip(event)" checked></td>
         </tr>
         </table>
