fix: update calc

--- a/calc.html
+++ b/calc.html
@@ -359,7 +359,7 @@ limitations under the License.-->
 
     <div id="footer"><a href="https://github.com/gjssss/Factorio-Calculator">GitHub</a>
 
-        <div id="display_count" style="color: var(--dark)">0</div>
+        <!-- <div id="display_count" style="color: var(--dark)">0</div> -->
 </body>
 
 </html>
