--- a/calc.html
+++ b/calc.html
@@ -104,9 +104,9 @@ limitations under the License.-->
             data-i18n="Visualize">Visualize</button>
         <button class="tab_button" id="settings_button" onclick="clickTab('settings_tab')"
             data-i18n="Settings">Settings</button>
-        <button class="tab_button" id="faq_button" onclick="clickTab('faq_tab')" data-i18n="FAQ">FAQ</button>
-        <button class="tab_button" id="about_button" onclick="clickTab('about_tab')" data-i18n="About">About</button>
-        <button class="tab_button" id="debug_button" onclick="clickTab('debug_tab')" data-i18n="Debug">Debug</button>
+        <!-- <button class="tab_button" id="faq_button" onclick="clickTab('faq_tab')" data-i18n="FAQ">FAQ</button> -->
+        <!-- <button class="tab_button" id="about_button" onclick="clickTab('about_tab')" data-i18n="About">About</button> -->
+        <!-- <button class="tab_button" id="debug_button" onclick="clickTab('debug_tab')" data-i18n="Debug">Debug</button> -->
     </div>
 
     <div id="steps_tab" class="tab">
